tests/errors/operators/string_cast_unstringifiable.sad
# string_cast_unstringifiable test
model Dummy {}
d = Dummy()
show(String(d))
